--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -170,7 +170,7 @@
                                 <button type="button" class="btn btn-default btn-sm">Previous</button>
                               </div>
                               <div class="btn-group" role="group">
-                                <button type="button" class="btn btn-default btn-sm">Next</button>
+                                <button type="button" class="btn btn-default btn-sm" id="noborder">Next</button>
                               </div>
                             </div>
                         </nav>
