--- a/import_sole.html
+++ b/import_sole.html
@@ -1,34 +1,5 @@
-<!doctype html>
-<html th:fragment="layout (template, menu)" lang="en" xml:lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
-
-    <title>Owner Sole Proprietor :: USPTO.gov :: webapp prototype</title>
-
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-
-	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-<!--    <link rel="stylesheet" th:href="@{/resources/css/usPTO.css}"/>-->   
-	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/lynnstyles.css">
-   
-</head>
-
-<body class="insertform">
+<template>
+	<div class="container-fluid insertform">
       <div class="row content">
         <div class="col-xs-12">
             <!--START Content Div-->
@@ -38,16 +9,20 @@
                     <div class="card-text">
                         <h2 class="card-title weight600" id="ownerinfo">Owner Information</h2>
                     </div>
+                    <script type="application/javascript" src="js/imports.js"></script>
                     	<form method="post" id="sole" action="" aria-labelledby="usentityselected" name="entityform">
                         	<fieldset aria-labelledby="ownerinfo">
                                 <div class="row">
-                                  <div class="form-group form-group-md col-xs-12 col-sm-12 col-lg-4">
+                                  <div class="form-group form-group-md col-xs-12 col-lg-7">
                                     <label for="ownername"><span class="weight600">&#42;</span>Owner Name</label>
-                                    <input type="text" class="form-control" id="ownername" name="ownernamefield" th:field="*{firstName}">
+                                    <input type="text" class="form-control" id="ownername" name="ownernamefield" th:field="*{firstName}" required>
                                   </div>
+                                  <div class="form-group form-group-md col-xs-12">
+                                        <p class="weight600">Add additional name if I do business as/or trading under a different name:</p>
+                                      </div>
                                   <div class="form-group form-group-md col-xs-12 col-sm-6 col-lg-4">
-                                    <label for="additionalname">Additional Name</label>
-                                    <select class="form-control" id="additionalname" th:field="*{ownerType}">
+                                    <label for="additionalname">Type</label>
+                                    <select class="form-control" id="type" th:field="*{ownerType}">
                                       <option value="Select">Select</option>
                                       <option value="DBA">Doing Business As (DBA)</option>
                                       <option value="TA">Trading As (TA)</option>
@@ -55,8 +30,12 @@
                                       <option value="Formerly">Formerly</option>
                                     </select>
                                   </div>
+                                  <div class="form-group form-group-md col-xs-12 col-sm-6 col-lg-4" id="nametype">
+                                        <label for="nameoftype">Name</label>
+                                        <input type="text" class="form-control" id="nameoftype" name="nameoftype"><!--needs th:attribute-->
+                                  </div>
                                   <div class="form-group form-group-md col-xs-12 col-sm-6 col-lg-4">
-                                    <label for="stateoforg"><span class="weight600">&#42;</span>State of Organization</label>
+                                    <label for="stateoforg">State of Organization</label>
                                     <select class="form-control" id="stateoforg" name="stateoforg">
                                       <option value="Select">Select</option>
                                       <option value="AL">Alabama</option>
@@ -81,7 +60,7 @@
                             <div class="row">
                               <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
                                 <label for="firstname"><span class="weight600">&#42;</span>First Name</label>
-                                <input type="text" class="form-control" id="firstname" name="firstname">
+                                <input type="text" class="form-control" id="firstname" name="firstname" required>
                               </div>
                               <div class="form-group form-group-md col-xs-12 col-md-4 col-lg-3">
                                 <label for="middlename">Middle Name</label>
@@ -89,7 +68,7 @@
                               </div>
                               <div class="form-group form-group-md col-xs-12 col-md-12 col-lg-5">
                                 <label for="lastname"><span class="weight600">&#42;</span>Last Name</label>
-                                <input type="text" class="form-control" id="lastname" name="lastname" th:field="*{lastName}">
+                                <input type="text" class="form-control" id="lastname" name="lastname" th:field="*{lastName}" required>
                               </div>
                               <div class="form-group form-group-md col-xs-6">
                                 <label for="suffix">Suffix</label>
@@ -124,24 +103,28 @@
                     </div>
                     <fieldset aria-labelledby="addressinfo">
                     	<div class="row">
-                          <div class="form-group form-group-md col-md-12 col-lg-7">
-                            <label for="territory">Country/US Territory</label>
-                            <select class="form-control" id="territory" name="territory">
-                              <option value="select">Select</option>
-                              <option value="United States">United States</option>
-                              <option value="Afghanistan">Afghanistan</option>
-                              <option value="Albania">Albania</option>
-                              <option value="Belgium">Belgium</option>
-                              <option value="Brazil">Brazil</option>
-                              <option value="Cambodia">Cambodia</option>
-                              <option value="Cameroon">Cameroon</option>
-                              <option value="Denmark">Denmark</option>
-                              <option value="Dominican Republic">Dominican Republic</option>
-                            </select>
+                          <div class="form-group form-group-md col-xs-12 col-md-6">
+                            <label for="email"><span class="weight600">&#42;</span>Email Address <a href="#" data-toggle="tooltip" title="The USPTO will use this email address to end correspondence regarding this application or registration. It is critical to ensure this email address is current." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>
+                            <input type="text" class="form-control" id="email" name="email" th:field="*{ownerEmail}" required>
+                          </div>
+                          <div class="form-group form-group-md col-xs-12 col-md-6">
+                                <label for="territory"><span class="weight600">&#42;</span>Country/US Territory</label>
+                                <select class="form-control" id="territory" name="territory" required>
+                                  <option value="select">Select</option>
+                                  <option value="United States">United States</option>
+                                  <option value="Afghanistan">Afghanistan</option>
+                                  <option value="Albania">Albania</option>
+                                  <option value="Belgium">Belgium</option>
+                                  <option value="Brazil">Brazil</option>
+                                  <option value="Cambodia">Cambodia</option>
+                                  <option value="Cameroon">Cameroon</option>
+                                  <option value="Denmark">Denmark</option>
+                                  <option value="Dominican Republic">Dominican Republic</option>
+                                </select>
                           </div>
                           <div class="form-group form-group-md col-md-12 col-lg-8">
                             <label for="addressline1"><span class="weight600">&#42;</span>Address Line 1</label>
-                            <input type="text" class="form-control" id="addressline1" name="addressline1" th:field="*{ownerAddress1}">
+                            <input type="text" class="form-control" id="addressline1" name="addressline1" th:field="*{ownerAddress1}" required>
                           </div>
                           <div class="form-group form-group-md col-md-12 col-lg-8">
                             <label for="addressline2">Address Line 2</label>
@@ -153,11 +136,11 @@
                           </div>
                           <div class="form-group form-group-md col-xs-12 col-md-12 col-lg-5">
                             <label for="city"><span class="weight600">&#42;</span>City</label>
-                            <input type="text" class="form-control" id="city" name="city" th:field="*{ownerCity}">
+                            <input type="text" class="form-control" id="city" name="city" th:field="*{ownerCity}" required>
                           </div>
                           <div class="form-group form-group-md col-xs-12 col-md-4 col-lg-3">
                             <label for="state"><span class="weight600">&#42;</span>State</label>
-                            <select class="form-control" id="state" name="state" th:field="*{ownerState}">
+                            <select class="form-control" id="state" name="state" th:field="*{ownerState}" required>
                               <option value="Select">Select</option>
                               <option value="Virginia">Virginia</option>
                               <option value="Maryland">Maryland</option>
@@ -166,56 +149,41 @@
                           </div>
                           <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
                             <label for="zipcode"><span class="weight600">&#42;</span>Zip Code</label>
-                            <input type="text" class="form-control" id="zipcode" name="zipcode" placeholder="XXXXX" th:field="*{ownerZipcode}">
+                            <input type="text" class="form-control" id="zipcode" name="zipcode" placeholder="XXXXX" th:field="*{ownerZipcode}" required>
                           </div>
+                          <div class="form-group form-group-md col-xs-12 col-md-7">
+                                <label for="webaddress">Website Address</label>
+                                <input type="text" class="form-control" id="webaddress" th:field="*{ownerWebSite}">
+                              </div>
+                          <div class="col-xs-12 phone">
+                              <div class="form-group form-group-md col-xs-12 col-md-4 col-lg-4">
+                                <label for="phonenumbertype">Phone Type</label>
+                                <select class="form-control" id="phonenumbertype" name="phonenumbertype">
+                                  <option value="Type">Type</option>
+                                  <option value="Cell">Cell</option>
+                                  <option value="Home">Home</option>
+                                  <option value="Work">Work</option>
+                                  <option value="Fax">Fax</option>
+                                </select>
+                              </div>
+                              <div class="form-group form-group-md col-xs-12 col-md-6 col-lg-6">
+                                <label for="phonenumber">Phone Number</label>
+                                <input type="text" class="form-control" id="phonenumber" name="phonenumber" th:field="*{ownerPhone}">
+                              </div>
+                              <div class="form-group form-group-md col-xs-12 col-md-2 col-lg-2">
+                                <label for="extension">Ext.</label>
+                                <input type="text" class="form-control" id="extension">
+                              </div>
+                           </div>
+                           <div class="appendto"></div>
+                           <div class="col-xs-12">
+                                <button type="button" class="btn-sm btn-success fill" id="clonephone">Add Additional Phone Number</button>
+                           </div>
                        	</div>
                       </fieldset>
                     <!--END Owner Address Information Form-->
-                	<!--START Additional Information Form-->
-                    <div class="card-text">
-                        <h2 class="card-title weight600" id="additionalinfo">Additional Information</h2>
-                    </div>
-                    <fieldset aria-labelledby="additionalinfo">
-                    	<div class="row">
-                          <div class="form-group form-group-md col-xs-12 col-md-6">
-                            <label for="email"><span class="weight600">&#42;</span>Email Address <a href="#" data-toggle="tooltip" title="The USPTO will use this email address to end correspondence regarding this application or registration. It is critical to ensure this email address is current." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>
-                            <input type="text" class="form-control" id="email" name="email" th:field="*{ownerEmail}">
-                          </div>
-                          <div class="form-group form-group-md col-xs-12 col-md-6">
-                            <label for="webaddress">Website Address</label>
-                            <input type="text" class="form-control" id="webaddress" th:field="*{ownerWebSite}">
-                          </div>
-                          <div class="row">
-                              <div class="col-xs-12">
-                                  <div class="form-group form-group-md col-xs-12 col-md-4 col-lg-4">
-                                    <label for="phonenumbertype">Phone Type</label>
-                                    <select class="form-control" id="phonenumbertype" name="phonenumbertype">
-                                      <option value="Type">Type</option>
-                                      <option value="Cell">Cell</option>
-                                      <option value="Home">Home</option>
-                                      <option value="Work">Work</option>
-                                      <option value="Fax">Fax</option>
-                                    </select>
-                                  </div>
-                                  <div class="form-group form-group-md col-xs-12 col-md-6 col-lg-6">
-                                    <label for="phonenumber">Phone Number</label>
-                                    <input type="text" class="form-control" id="phonenumber" name="phonenumber" th:field="*{ownerPhone}">
-                                  </div>
-                                  <div class="form-group form-group-md col-xs-12 col-md-2 col-lg-2">
-                                    <label for="extension">Ext.</label>
-                                    <input type="text" class="form-control" id="extension">
-                                  </div>
-                             </div>
-                          </div>
-                        </div>
-                      </fieldset>
-                    </form>
-                    <!--END Additional Information Form-->
             </div><!--END Content Div-->
         </div><!--MAIN-->
       </div><!--END container div-->
-      
-        
     </div>
-  </body>
-</html>
+  </template>
