--- a/marks_layout_M017.html
+++ b/marks_layout_M017.html
@@ -171,10 +171,11 @@
                                          <label class="form-check-label form-check" for="tradeserv" id="tradeserv2"><span class="radio notspecial">Trademark / Servicemark</span></label>
                                     </div>
                                     <div role="heading" aria-level="3">
-                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#markoptions" aria-controls="markoptions" aria-expanded="false" id="optionsbtn"><span class="glyphicon glyphicon-triangle-right"></span><span  class="toggleglyph glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Uncommon Mark Options</button>
+                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#markoptions" aria-controls="markoptions" aria-expanded="false" id="optionsbtn"><span class="glyphicon glyphicon-triangle-right"></span><span  class="toggleglyph glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Expand for Uncommon Mark Types</button>
                                     </div>
                                     <div id="markoptions" class="collapse Accordion-panel" role="region" aria-labelledby="optionsbtn">
                                         <div class="Accordion">
+                                        	<p><span class="weight600">&#42;</span> Which of the following types best describes the mark you want to apply for?</p>
                                             <input class="form-check-input checkmark" type="checkbox" value="Certification" aria-checked="false" tabindex="0" aria-labelledby="cert" id="certcheck">
                                             <label class="form-check-label form-check" for="certcheck" id="cert"><span class="radio notspecial">Certification</span></label>
                                             <input class="form-check-input checkmark" type="checkbox" value="Collective" aria-checked="false" tabindex="0" id="collectcheck" aria-labelledby="collect">
@@ -194,6 +195,9 @@
                     <div class="container-fluid">
                         <div class="row" id="panels">
                                 <div class="row">
+                                	<div class="col-xs-12">
+                                        <p><span class="weight600">&#42;</span> Which of the following types best describes the mark you want to apply for?</p>
+                                    </div>
                                         <div class="col-xs-12">
                                             <div class="row">
                                                 <div class="col-sm-12 col-md-6">
