--- a/marks_examples_M3.html
+++ b/marks_examples_M3.html
@@ -56,7 +56,16 @@
                 <li><a href="#">Contact Us</a></li>
               </ul>
             </li>
-            <li><a href="#">Lynn Stanikmas</a></li>
+            <li class="dropdown">
+            	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Lynn Stanikmas<span class="caret"></span></a>
+            	<ul class="dropdown-menu">
+                    <li><a href="https://efilereimagined.com/accounts/dashboard">eFile</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="https://efilereimagined.com/accounts/userHome">Account</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="https://efilereimagined.com/logout">Sign Out</a></li>
+              	</ul>
+            </li>
             <li><a href="https://my.uspto.gov/" class="orange">MyUSPTO</a></li>
           </ul>
           
@@ -549,13 +558,15 @@
                         </div>
                     </div>
                     <div class="col-xs-8 col-sm-4 col-md-3">
+                	<div class="row">
                         <div class="col-xs-6">
-                            <span id="webPolicy"><p>Website Policy</p></span>
+                            <p><span id="webPolicy">Website Policy</span></p>
                         </div>
                         <div class="col-xs-6">
                             <p>Privacy Policy</p>
                         </div>
                     </div>
+                </div>
                 </div>
             </div>
         </footer>
