--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -58,7 +58,16 @@
                 <li><a href="#">Contact Us</a></li>
               </ul>
             </li>
-            <li><a href="#">Lynn Stanikmas</a></li>
+            <li class="dropdown">
+            	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Lynn Stanikmas<span class="caret"></span></a>
+            	<ul class="dropdown-menu">
+                    <li><a href="https://efilereimagined.com/accounts/dashboard">eFile</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="https://efilereimagined.com/accounts/userHome">Account</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="https://efilereimagined.com/logout">Sign Out</a></li>
+              	</ul>
+            </li>
             <li><a href="https://my.uspto.gov/" class="orange">MyUSPTO</a></li>
           </ul>
           
@@ -166,10 +175,10 @@
                         </div>
                         <nav class="col-xs-6" id="previousnext">
                     		<div class="btn-group btn-group-justified btn-sm" role="group" aria-label="previous and next buttons">
-                              <div class="btn-group" role="group">
+                              <div class="btn-group">
                                 <button type="button" class="btn btn-default btn-sm">Previous</button>
                               </div>
-                              <div class="btn-group" role="group">
+                              <div class="btn-group">
                                 <button type="button" class="btn btn-default btn-sm" id="noborder">Next</button>
                               </div>
                             </div>
@@ -201,7 +210,7 @@
                                       </div>
                                       <div class="form-group form-group-md col-xs-12 col-sm-12 col-lg-6">
                                         <label for="attorney-first-name"><span class="weight600">&#42;</span> First Name</label>
-                                        <input type="text" class="form-control" id="attorney-first-name" th:field="*{firstName}" name="first" placeholder="First Name">
+                                        <input type="text" class="form-control" id="attorney-first-name" th:field="*{firstName}" name="first" placeholder="First Name" required>
                                       </div>
                                       <div class="form-group form-group-md col-xs-12 col-sm-12 col-lg-6">
                                         <label for="Attorney-middle-name">Middle Name</label>
@@ -209,7 +218,7 @@
                                       </div>
                                       <div class="form-group form-group-md col-xs-12 col-sm-9 col-lg-6">
                                         <label for="attorney-last-name"><span class="weight600">&#42;</span> Last Name</label>
-                                        <input type="text" class="form-control" id="attorney-last-name" th:field="*{lastName}">
+                                        <input type="text" class="form-control" id="attorney-last-name" th:field="*{lastName}" required>
                                       </div>
                                       <div class="form-group form-group-md col-xs-5 col-sm-3">
                                         <label for="suffix">Suffix</label>
@@ -222,7 +231,7 @@
                                       </div>
                                       <div class="form-group form-group-md col-xs-12 col-sm-12 col-lg-5">
                                         <label for="attorney-lawfirm-name"><span class="weight600">&#42;</span> Firm</label>
-                                        <input type="text" class="form-control" id="attorney-lawfirm-name" th:field="*{lawFirmName}" placeholder="Law Firm Name">
+                                        <input type="text" class="form-control" id="attorney-lawfirm-name" th:field="*{lawFirmName}" placeholder="Law Firm Name" required>
                                       </div>
                                  	</div>
                               </fieldset><!--END Attorney Information-->
@@ -554,42 +563,55 @@
                                         <label for="attorney-zipcode">Zip Code</label>
                                         <input type="text" class="form-control" id="attorney-zipcode" placeholder="XXXXX" th:field="*{attorneyZipcode}">
                                       </div>
-                                      <div class="form-group form-group-md col-xs-12 col-md-5 col-lg-5">
+                                      <div class="form-group form-group-md col-xs-12 col-md-7 col-lg-7">
                                         <label for="attorney-email"><span class="weight600">&#42;</span> Email Address</label>
-                                        <input type="text" class="form-control" id="attorney-email" placeholder="email Address" th:field="*{attorneyEmail}">
+                                        <input type="text" class="form-control" id="attorney-email" placeholder="email Address" th:field="*{attorneyEmail}" required>
                                       </div>
-                                      <div class="form-group form-group-md col-xs-12 col-md-3 col-lg-3">
-                                        <label for="attorney-phonenumbertype">Phone Type</label>
-                                        <select class="form-control" id="attorney-phonenumbertype"><!--Needs th:field= attribute to capture this value on submit-->
-                                          <option value="Type">Type</option>
-                                          <option value="Cell">Cell</option>
-                                          <option value="Home">Home</option>
-                                          <option value="4">Work</option>
-                                          <option value="Fax">Fax</option>
-                                        </select>
+                                      <div class="col-xs-12 col-md-7 phones">
+                                          <div class="form-group form-group-md col-xs-4">
+                                            <label for="attorney-phonenumbertype">Phone Type</label>
+                                            <select class="form-control" id="attorney-phonenumbertype"><!--Needs th:field= attribute to capture this value on submit-->
+                                              <option value="Type">Type</option>
+                                              <option value="Cell">Cell</option>
+                                              <option value="Home">Home</option>
+                                              <option value="4">Work</option>
+                                              <option value="Fax">Fax</option>
+                                            </select>
+                                          </div>
+                                          <div class="form-group form-group-md col-xs-8">
+                                            <label for="attorney-phone"><span class="weight600">&#42;</span> Phone Number</label>
+                                            <input type="text" class="form-control" id="attorney-phone" placeholder="Phone Number" th:field="*{attorneyPhone}" required>
+                                          </div>
                                       </div>
-                                      <div class="form-group form-group-md col-xs-12 col-md-4 col-lg-4">
-                                        <label for="attorney-phone"><span class="weight600">&#42;</span> Phone Number</label>
-                                        <input type="text" class="form-control" id="attorney-phone" placeholder="Phone Number" th:field="*{attorneyPhone}">
-                                      </div>
-                                      <div class="col-xs-12">
-                                        <button type="button" class="btn-sm btn-success add ctr">Additional Number</button>
-                                      </div>
-                                  	</div>
+                                    <div class="appendphone"></div>
+                                    <div class="col-xs-7 col-md-5" role="group" aria-label="Add or delete additional phone numbers">
+                                        <div class="col-xs-9">
+                                            <button type="button" class="btn-sm btn-success add ctr" id="addphone">Add Number</button>
+                                        </div>
+                                        <div class="col-xs-3">
+                                            <button type="button" class="btn-sm btn-success add ctr" id="resetphone">&#8211;</button>
+                                        </div>
+                                    </div>
+                                </div>
                                 </fieldset><!--END Contact Attorney Information-->
                                 <!--START Docket Reference Information-->
                                 <div class="card-text">
-                                <h2 class="card-title weight600" id="docketreference">Docket or Reference Number</h2>
+                                	<h2 class="card-title weight600" id="docketreference">Docket or Reference Number</h2>
                                 </div>
-                                <fieldset aria-labelledby="docketreference">
-                                	<div class="row">
-                                        <div class="form-group form-group-md col-xs-12">
-                                            <label for="docket-id">If applicable, enter the attorney docket or reference number.</label>
-                                            <input type="text" class="form-control" id="docket-id" th:field="*{attorneyDocketNumber}">
+                                <fieldset aria-labelledby="docketreference" class="row">
+                                    <div class="form-group form-group-md col-xs-12 col-md-7" id="copy">
+                                        <label for="docket-id">If applicable, enter the attorney docket or reference number.</label>
+                                        <input type="text" class="form-control" id="docket-id" th:field="*{attorneyDocketNumber}">
+                                    </div>
+                                    <div class="appenddocket"></div>
+                                    <div class="col-xs-7 col-md-5" role="group" id="plusdocket" aria-label="Add or delete additional docket or reference numbers">
+                                        <div class="col-xs-9">
+                                            <button type="button" class="btn-sm btn-success add ctr" id="addocket">Add Number</button>
                                         </div>
-                                        <div class="col">
-                                            <button type="button" class="btn-sm btn-success add ctr">Additional Docket or Reference Number</button>
+                                        <div class="col-xs-3">
+                                            <button type="button" class="btn-sm btn-success add ctr" id="resetdockets">&#8211;</button>
                                         </div>
+                                    </div>
                                 </fieldset><!--END Docket Reference Information-->
                                 <!--START Affiliation Information-->
                                 <div class="card-text">
@@ -822,11 +844,13 @@ Upload bar credentials, including certificate of good standing from highest cour
                     </div>
                 </div>
                 <div class="col-xs-8 col-sm-4 col-md-3">
-                    <div class="col-xs-6">
-                        <p><span id="webPolicy">Website Policy</span></p>
-                    </div>
-                    <div class="col-xs-6">
-                        <p>Privacy Policy</p>
+                	<div class="row">
+                        <div class="col-xs-6">
+                            <p><span id="webPolicy">Website Policy</span></p>
+                        </div>
+                        <div class="col-xs-6">
+                            <p>Privacy Policy</p>
+                        </div>
                     </div>
                 </div>
             </div>
