--- a/marks_layout_M017.html
+++ b/marks_layout_M017.html
@@ -55,7 +55,16 @@
                 <li><a href="#">Contact Us</a></li>
               </ul>
             </li>
-            <li><a href="#">Lynn Stanikmas</a></li>
+            <li class="dropdown">
+            	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Lynn Stanikmas<span class="caret"></span></a>
+            	<ul class="dropdown-menu">
+                    <li><a href="https://efilereimagined.com/accounts/dashboard">eFile</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="https://efilereimagined.com/accounts/userHome">Account</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="https://efilereimagined.com/logout">Sign Out</a></li>
+              	</ul>
+            </li>
             <li><a href="https://my.uspto.gov/" class="orange">MyUSPTO</a></li>
           </ul>
           
@@ -163,7 +172,13 @@
                                     <div class="card-text">
                                         <h2 class="card-title weight600" id="applicationtype">Mark Type</h2>
                                     </div>
-                                    <p id="typemark"><span class="weight600">&#42;</span> What type of mark are you applying for?<!--<i data-toggle="tooltip" class="material-icons" title="Long copy here." style="position: relative; top:8px; right:-25px;">info_outline</i>--></p>
+                                    <p id="typemark"><span class="weight600">&#42;</span> What type of mark are you applying for? <a href="#" data-toggle="tooltip" title="" class="glyphicon glyphicon-info-sign test" data-placement="right" data-original-title="Trademarks and service marks: Are generally words, symbols, designs, or combinations of these.  Marks are often brand names; they work to identify the sources of goods or services, showing that they come from particular manufacturers or sellers.  Trademarks are for goods, which are physical things that are sold to others, like shoes.  Service marks are for services that are provided to others, like tax preparation services.
+ 
+Certification Mark:  A certification mark is a type of trademark that is used to show consumers that particular goods and/or services, or their providers, have met certain standards.  (See the Certification Marks webpage)
+ 
+Collective Mark:  A collective mark is mark used by members of a collective organization to identify their goods and/or services and distinguish them from the goods and/or services of non-members.  (See TMEP Section 1303)
+ 
+Collective Membership Mark:  A collective membership mark is a mark used by the members of a particular organization to signify that they are members of that organization (e.g., a social club or labor union:  See TMEP Section 1304)."></a></p>
                                <fieldset>
                                     <legend>Select the type of mark you are applying for</legend>
                                     <div>
@@ -528,13 +543,15 @@
                         </div>
                     </div>
                     <div class="col-xs-8 col-sm-4 col-md-3">
+                	<div class="row">
                         <div class="col-xs-6">
-                            <span id="webPolicy"><p>Website Policy</p></span>
+                            <p><span id="webPolicy">Website Policy</span></p>
                         </div>
                         <div class="col-xs-6">
                             <p>Privacy Policy</p>
                         </div>
                     </div>
+                </div>
                 </div>
             </div>
         </footer>
