GS_Selected/PrevNextBTNs
New GS (Selected) Page + PrevNext Btns added

--- a/marks_layout_M017.html
+++ b/marks_layout_M017.html
@@ -518,6 +518,15 @@ Collective Membership Mark:  A collective membership mark is a mark used by the 
                         	</div><!--END row-->
                     	</div><!--END panels row-->
                   	</div>
+                    <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
+                        </div>
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-sm btn-primary fill next" id="" value="next">Next 
+                                <div class="round"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></div></button>
+                        </div>
+                    </div>
              	</main>
         	</div><!--END Tiles row-->
       	</div><!--END container div-->
