--- a/owner_info_M1.html
+++ b/owner_info_M1.html
@@ -168,19 +168,9 @@
                         </section>
                     </div>
                     <div class="row">
-                    	<div class="col-xs-5 col-sm-6">
+                    	<div class="col-xs-12">
                     		<h1>Owner Information</h1>
                         </div>
-                        <nav class="col-xs-7 col-sm-6" id="previousnext">
-                    		<div class="btn-group btn-group-justified btn-sm" role="group" aria-label="previous and next buttons">
-                              <div class="btn-group" role="group">
-                                <button type="button" class="btn btn-default btn-sm">Previous</button>
-                              </div>
-                              <div class="btn-group" role="group">
-                                <button type="button" class="btn btn-default btn-sm" id="noborder">Next</button>
-                              </div>
-                            </div>
-                        </nav>
                     </div>
                     <p class="required"><span class="weight600">&#42; = Required</span></p>
                     
@@ -241,6 +231,15 @@
                             </section>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
+                <div class="btn-group">
+                    <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
+                </div>
+                <div class="btn-group">
+                    <button type="button" class="btn btn-sm btn-primary fill next" id="" value="next">Next 
+                        <div class="round"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></div></button>
                 </div>
             </div>
         </main>
