--- a/GS_selected.html
+++ b/GS_selected.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
 
-    <title>USPTO.gov :: webapp prototype :: Trademark Design with Text - File Upload</title>
+    <title>USPTO.gov :: webapp prototype :: Goods and Services - Selected Goods and Services</title>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -88,7 +88,7 @@
             <li><a href="#">Applications / Registration</a></li>-->
             <!--<li><a href="#" class="glyphed" id="showcontacts"><span class="glyphicon glyphicon-list" aria-hidden="true"></span>Managed Contacts</a></li>-->
             <!--<li><a href="#" class="glyphed" id="showfees"><span class="glyphicon glyphicon-usd kerned" aria-hidden="true"></span>Fees</a></li>-->
-            <!--<li><a href="#" class="glyphed" data-toggle="popover" id="togglepop"><span class="glyphicon glyphicon-picture" aria-hidden="true"></span>Mark</a></li>-->
+            <li><a href="#" class="glyphed" data-toggle="popover" id="togglepop"><span class="glyphicon glyphicon-picture" aria-hidden="true"></span>Show My Mark</a></li>
           </ul>
           <br style="clear:both">
         </div><!-- /.navbar-collapse -->
@@ -114,7 +114,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-2 two active">
+                        <div class="col-xs-2 two done">
                             <div class="row">
                                 <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
                                     <span>2</span>
@@ -124,7 +124,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-2 three">
+                        <div class="col-xs-2 three active">
                             <div class="row">
                                 <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
                                     <span>3</span>
@@ -167,59 +167,120 @@
                     </div>
                 </section>
             </div>
-          <h1>Trademark Details &#8211; Design with Text</h1>
-          <p class="required"><span class="weight600">&#42; = Required</span></p>
-          <!--START Trademark Examples-->
-              <!--START Standard Character-->
+          <h1>Goods and Services</h1>
                     <div class="row">
-                        <div class="col-xs-12">
-                            <div class="card-text">
-                                <h2 class="card-title weight600" id="markinfo">Mark Information</h2>
+                        <div class="col-xs-12" id="gsselected">
+                            <div class="lead">
+                                <p>All of the selected goods and services are provided below.</p>
                             </div>
                             	<div class="row">
-                                    <div class="col-xs-12" >
-                                      <p id="typemark"><span class="weight600">&#42;</span> Upload a file containing your mark.</p>						
-                                        <!--Start Dropzone-->
-                                      <div class="col-xs-12 form-group form-group-md">
-                                        <form action="" method="post" enctype="multipart/form-data" aria-labelledby="markinfo">
-                                            <fieldset>
-                                                <legend class="sr-only"><span>File upload</span></legend>
-                                                <div class="form-group form-group-md">
-                                                    <label class="small upload-drop-zone" for="file"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select a File</label>
-                                                    <input type="file" id="file" name="file" class="form-control">
-                                                </div><!-- Drop Zone -->
-                                                
-                                            </fieldset>
-                                        </form>
-                                        <div class="row">
-                                            <div class="js-upload-finished col-xs-12 col-md-10 col-lg-8">
-                                                <p id="uploaded">Processed files</p>
-                                                <div class="list-group">
-                                                    <a href="#" class="list-group-item list-group-item-success" aria-labelledby="uploaded"></a>
+                                    <div class="col-xs-12">
+                                    
+                                        <!--START selected panels-->
+                                        <!--panel one-->
+                                        <div class="panel-group" id="gsone">
+                                            <div class="panel panel-default">
+                                                <div class="panel-heading">
+                                                  	<div class="row">
+                                                        <div class="col-xs-10">
+                                                            <div class="col-xs-12">
+                                                            	<div class="row">
+                                                                    <div class="col-xs-5">
+                                                                        <h4 class="panel-title number">Class 003</h4>
+                                                                    </div>
+                                                                    <div class="col-xs-7">
+                                                                        <p>Bar Soap</p>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-xs-2 closepans">
+                                                        	<button type="button" class="close closegspanels btn" aria-label="Close"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>	
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
-                                        </div><!-- Upload Finished -->
+                                        </div>
+                                        <!--panel two-->
+                                        <div class="panel-group" id="gsone">
+                                            <div class="panel panel-default">
+                                                <div class="panel-heading">
+                                                  	<div class="row">
+                                                        <div class="col-xs-10">
+                                                            <div class="col-xs-12">
+                                                            	<div class="row">
+                                                                    <div class="col-xs-5">
+                                                                        <h4 class="panel-title number">Class 003</h4>
+                                                                    </div>
+                                                                    <div class="col-xs-7">
+                                                                        <p>Liquid Bar Soap</p>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-xs-2 closepans">
+                                                        	<button type="button" class="close closegspanels btn" aria-label="Close"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>	
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!--panel three-->
+                                        <div class="panel-group" id="gsone">
+                                            <div class="panel panel-default">
+                                                <div class="panel-heading">
+                                                  	<div class="row">
+                                                        <div class="col-xs-10">
+                                                            <div class="col-xs-12">
+                                                            	<div class="row">
+                                                                    <div class="col-xs-5">
+                                                                        <h4 class="panel-title number">Class 016</h4>
+                                                                    </div>
+                                                                    <div class="col-xs-7">
+                                                                        <p>Paper Bags</p>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-xs-2 closepans">
+                                                        	<button type="button" class="close closegspanels btn" aria-label="Close"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>	
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div><!--END selected panels-->
+                                        <div class="row">
+                                            <div class="col-xs-12">
+                                                <p>If you would like to add more, select a following method to add additional goods and services. <span class="weight600">Otherwise, continue on to add the filing basis</span>.</p>
+												<div class="inlinebuttons btn-group btn-group-justified" role="group" aria-label="search manual or manually upload">
+                          							<div class="btn-group">
+                                                    	<button type="button" class="btn-sm btn-success fill" id="" value="searchidmanual">Search ID Manual</button>
+                                                    </div>
+                                                    <div class="btn-group">
+                                                    	<button type="button" class="btn-sm btn-success fill" id="" value="manualupload">Manually Upload</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div><!-- END button row -->
                                     </div>
                               	</div>
                             </div>
-                        </div><!--END col-->
+                        </div><!--END row-->
                     </div><!--END row-->                    
-              <!--END examples row-->
-            </div>
-          </div>
-          <!--END row-->
-          <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
-            <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
-            </div>
-            <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-primary fill next" id="" value="next">Next 
-                    <div class="round"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></div></button>
-            </div>
-        </div>
-    </main>
-  </div><!--END div content-->
-</div><!--END div container-->
+                  </div>
+                  <!--prev / next buttons-->
+                    <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
+                        </div>
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-sm btn-primary fill next" id="" value="next">Next 
+                                <div class="round"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></div></button>
+                        </div>
+                    </div>
+               </main>
+             </div><!--END div content-->
+           </div><!--END div container-->
   
 		    <!--jquery and web jars -->
     <!--<script th:src="@{/webjars/jquery/jquery.min.js}"></script>-->
