--- a/layout_M7.html
+++ b/layout_M7.html
@@ -350,6 +350,15 @@
                     </form><!--END Additional Information Form-->
             </div><!--END Content Div-->
           </div>
+          <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
+            <div class="btn-group">
+                <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
+            </div>
+            <div class="btn-group">
+                <button type="button" class="btn btn-sm btn-primary fill next" id="" value="next">Next 
+                    <div class="round"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></div></button>
+            </div>
+        </div>
         </main><!--MAIN-->
       </div><!--END container div-->
       
