--- a/marks_design_with_text_disclaimer_M2.html
+++ b/marks_design_with_text_disclaimer_M2.html
@@ -290,6 +290,15 @@
             </div>
           </div>
           <!--END row-->
+          <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
+            <div class="btn-group">
+                <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
+            </div>
+            <div class="btn-group">
+                <button type="button" class="btn btn-sm btn-primary fill next" id="" value="next">Next 
+                    <div class="round"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></div></button>
+            </div>
+        </div>
     </main>
   </div><!--END div content-->
 </div><!--END div container-->
